Fix JS, wrap sections in .content-item, neaten TODO

--- a/global/css/main.css
+++ b/global/css/main.css
@@ -3,10 +3,10 @@ body
 
 #content
 
-#title-area - add image
+#title-area - done
 .paragraph - done
-.image - done, but doesn't seem very practical
-.dual-section - looks done, but needs testing with images
+.image - done
+.dual-section - done, but untested with images
 .image-break - done
 */
 
@@ -20,6 +20,14 @@ body
     
     left: var(--left-nav-width);
     width: min(var(--left-nav-margin-right), calc((var(--left-nav-margin-right) - 1px - ((100vw - (var(--left-nav-width) + var(--left-nav-margin-right) + var(--content-width))) / 2)) * 2));
+}
+
+
+.content-item {
+    height: fit-content;
+    width: 100%;
+    
+    padding-bottom: 2px;
 }
 
 
